--- a/NewsApp/app/src/main/res/layout/activity_home.xml
+++ b/NewsApp/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="edu.sjsu.newsapp.HomeActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -21,6 +22,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_home"/>
-
-</android.support.design.widget.CoordinatorLayout>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/fragment"/>
+</LinearLayout>
