--- a/NewsApp/app/src/main/res/layout/fragment_home.xml
+++ b/NewsApp/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_home">
 
 <android.support.v7.widget.RecyclerView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/top_stories_recyclerview">
 
