--- a/NewsApp/app/src/main/res/layout/top_stories_item.xml
+++ b/NewsApp/app/src/main/res/layout/top_stories_item.xml
@@ -2,38 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_marginTop="5dp"
-              android:layout_height="235dp">
+              android:layout_margin="5dp"
+              android:layout_height="155dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         card_view:cardCornerRadius="4dp"
         android:elevation="5dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:id="@+id/news_thumbnail"/>
-
-            <TextView
-                android:id="@+id/headline_text"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                tools:text="Trump fires XYZZZZZZadnasjdlajdlajdlajdlajlajlajd Trump fires XYZZZZZZadnasjdlajdlajdlajdlajlajlajd"/>
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp">
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/news_thumbnail"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/headline_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        tools:text="Trump fires XYZZZZZZadnasjdlajdlajdlajdlajlajlajd Trump fires XYZZZZZZadnasjdlajdlajdlajdlajlajlajd"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -43,29 +57,16 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:orientation="horizontal">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="16 hrs ago"
                     android:id="@+id/time_since_post"/>
-                <android.support.v4.widget.Space
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"/>
 
-                <android.support.v7.widget.AppCompatButton
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/ic_share_black_24dp"
-                    android:id="@+id/btn_share"/>
             </LinearLayout>
 
         </LinearLayout>
 
-
     </android.support.v7.widget.CardView>
-
 </LinearLayout>
+
