--- a/NewsApp/app/src/main/res/layout/activity_home.xml
+++ b/NewsApp/app/src/main/res/layout/activity_home.xml
@@ -21,9 +21,15 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
-
-<FrameLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fragment"/>
+    android:id="@+id/baselayout">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment"/>
+
+</LinearLayout>
+
 </LinearLayout>
