--- a/NewsApp/app/src/main/res/layout/activity_news_article.xml
+++ b/NewsApp/app/src/main/res/layout/activity_news_article.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/news_toolbar"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-    <WebView
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:id="@+id/web_view">
+        android:layout_height="match_parent"
+        android:id="@+id/news_detail_container">
 
-    </WebView>
+    </FrameLayout>
+
 </LinearLayout>
-
-
