--- a/NewsApp/app/src/main/res/layout/fragment_news_article.xml
+++ b/NewsApp/app/src/main/res/layout/fragment_news_article.xml
@@ -2,25 +2,27 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rootlayout"
-    android:orientation="vertical"
-    tools:context="edu.sjsu.newsapp.HomeActivityFragment">
+    android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/news_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/datalayout"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
-        <android.support.v7.widget.RecyclerView
+        android:id="@+id/datalayout">
+        <WebView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/top_stories_recyclerview">
+            android:layout_height="match_parent"
+            android:id="@+id/web_view">
 
-        </android.support.v7.widget.RecyclerView>
+        </WebView>
 
     </LinearLayout>
     <RelativeLayout
@@ -40,3 +42,5 @@
     </RelativeLayout>
 
 </LinearLayout>
+
+
