--- a/NewsApp/app/src/main/res/layout/top_stories_item.xml
+++ b/NewsApp/app/src/main/res/layout/top_stories_item.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_margin="5dp"
+              android:layout_marginLeft="5dp"
+              android:layout_marginRight="5dp"
               android:layout_height="155dp">
 
     <android.support.v7.widget.CardView
@@ -12,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp"
+        card_view:cardCornerRadius="2dp"
         android:elevation="5dp">
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +31,8 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:id="@+id/news_thumbnail"/>
+                        android:id="@+id/news_thumbnail"
+                        android:src="@drawable/ic_newspaper"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -67,6 +69,11 @@
 
         </LinearLayout>
 
+
     </android.support.v7.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey"/>
 </LinearLayout>
 
