--- a/NewsApp/app/src/main/res/layout/activity_home.xml
+++ b/NewsApp/app/src/main/res/layout/activity_home.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="edu.sjsu.newsapp.HomeActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -18,13 +17,32 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:layout_scrollFlags="scroll|enterAlways"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="scrollable"
+            android:background="?attr/colorPrimary">
+
+
+        </android.support.design.widget.TabLayout>
+
 
     </android.support.design.widget.AppBarLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    </android.support.v4.view.ViewPager>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/baselayout">
+    android:id="@+id/baselayout"
+    android:visibility="gone"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,4 +50,6 @@
 
 </LinearLayout>
 
-</LinearLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
