--- a/NewsApp/app/src/main/res/layout/activity_home.xml
+++ b/NewsApp/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.sjsu.newsapp.HomeActivity">
+    tools:context="edu.sjsu.newsapp.activity.HomeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
