--- a/NewsApp/app/src/main/res/menu/menu_home.xml
+++ b/NewsApp/app/src/main/res/menu/menu_home.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="edu.sjsu.newsapp.HomeActivity">
+      tools:context="edu.sjsu.newsapp.activity.HomeActivity">
     <item android:id="@+id/search"
           android:title="@string/search_title"
           android:icon="@drawable/ic_search_black_24dp"
