--- a/NewsApp/app/src/main/res/layout/top_stories_item.xml
+++ b/NewsApp/app/src/main/res/layout/top_stories_item.xml
@@ -4,30 +4,34 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_marginLeft="5dp"
-              android:layout_marginRight="5dp"
-              android:layout_height="155dp">
+
+              android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="1dp"
         android:elevation="5dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp">
+                    android:layout_margin="8dp"
+                    android:layout_gravity="center_vertical">
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
@@ -35,8 +39,9 @@
                         android:src="@drawable/ic_newspaper"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
                     <TextView
                         android:id="@+id/headline_text"
                         android:layout_width="match_parent"
@@ -45,35 +50,25 @@
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        tools:text="Trump fires XYZZZZZZadnasjdlajdlajdlajdlajlajlajd Trump fires XYZZZZZZadnasjdlajdlajdlajdlajlajlajd"/>
-
+                        tools:text="Placeholder"/>
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        tools:text="16 hrs ago"
+                        android:id="@+id/time_since_post"/>
                 </LinearLayout>
 
             </LinearLayout>
-            <android.support.v4.widget.Space
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="16 hrs ago"
-                    android:id="@+id/time_since_post"/>
 
-            </LinearLayout>
+
 
         </LinearLayout>
-
-
     </android.support.v7.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/grey"/>
+
 </LinearLayout>
 
